--- a/1908/css/1908.css
+++ b/1908/css/1908.css
@@ -6,7 +6,16 @@
   background: #FFFFFF;
 }
 .type-1908 .vlput {
-  width: 54%;
+  width: 41%;
+  padding: 3px;
+}
+.type-1908 .accordion1::after {
+  content: "\2212";
+  float: right;
+}
+.type-1908 .active1::after {
+  content: '\002B';
+  float: right;
 }
 .type-1908 .sidebar-shop {
   box-sizing: border-box;
@@ -34,9 +43,9 @@
 }
 .type-1908 .sidebar-shop .widget ul li .input-check input {
   position: relative;
-  height: 20px;
-  width: 20px;
-  top: 5px;
+  height: 14px;
+  width: 15px;
+  top: 3px;
   cursor: pointer;
 }
 .type-1908 .sidebar-shop .widget ul li .input-check a {
@@ -57,17 +66,12 @@
   padding: 0;
   border-bottom: 0;
 }
-.type-1908 .sidebar-shop .widget .widget-title i {
-  float: right;
-  color: gray;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 14px;
-  line-height: 1px;
-  text-transform: lowercase;
-}
 .type-1908 .sidebar-shop .box-filter {
   border-bottom: 1px solid #e8e8e8;
   margin-bottom: 20px;
+}
+.type-1908 .sidebar-shop .box-filter .panel-body {
+  display: none;
 }
 .type-1908 .sidebar-shop .box-filter:last-child {
   border: medium none;
@@ -75,6 +79,13 @@
 }
 .type-1908 .sidebar-shop .range-filter {
   color: #666;
+}
+.type-1908 .sidebar-shop .range-filter .input-group-addon {
+  margin-top: -1px;
+  width: 0;
+  padding: 8px;
+  display: inline-table;
+  margin-right: -4px;
 }
 .type-1908 .sidebar-shop .range-filter form {
   padding: 0;
@@ -95,19 +106,19 @@
   height: 30px;
   width: 72px;
 }
-.type-1908 .sidebar-shop .range-filter #slider-range {
+.type-1908 .sidebar-shop .range-filter #slider-range1 {
   background: #fe9c00 none repeat scroll 0 0;
   border: medium none;
   height: 1px;
-  margin: 30px 0;
+  margin: 30px 13px;
   cursor: pointer;
 }
-.type-1908 .sidebar-shop .range-filter #slider-range .ui-slider-handle {
+.type-1908 .sidebar-shop .range-filter #slider-range1 .ui-slider-handle {
   background: #ff9900 none repeat scroll 0 0;
   border: medium none;
   border-radius: 0;
   height: 16px;
-  margin: 0 -8px;
+  margin: 0 -14px;
   top: -8px;
   width: 16px;
   cursor: pointer;
