--- a/1923/css/1923.css
+++ b/1923/css/1923.css
@@ -64,24 +64,18 @@
   font-weight: 700;
   margin: 0 0 15px;
 }
-.type-1923 .detail_right .product-rating {
-  display: inline-block;
-  margin: 0;
-  vertical-align: top;
-  background: rgba(0,0,0,0) url(../images/bg-rate.png) repeat-x scroll 0 0;
-  height: 14px;
-  position: relative;
-  width: 70px;
+.type-1923 .detail_right .star-rating {
+  line-height: 32px;
+  font-size: 1.25em;
+  cursor: pointer;
 }
-.type-1923 .detail_right .product-rating .inner-rating {
-  background: rgba(0,0,0,0) url(../images/rate-star.png) repeat-x scroll 0 0;
-  height: 14px;
+.type-1923 .detail_right .star-rating .fa-star {
+  color: yellow;
 }
 .type-1923 .detail_right .product-order {
-  border-left: 1px solid #e8e8e8;
   height: 14px;
   line-height: 14px;
-  margin-left: 7px;
+  margin-left: -10px;
   padding-left: 10px;
   display: inline-block;
   position: relative;
@@ -155,47 +149,19 @@
   width: 100%;
   display: inline-block;
 }
-.type-1923 .detail_right .attr-info .variations .quantity {
-  float: none;
-  border: 1px solid #e8e8e8;
-  display: inline-block;
-  height: 30px;
-  line-height: 30px;
-  max-width: 240px;
-  padding: 0 35px;
-  position: relative;
+.type-1923 .detail_right .attr-info .variations .form-group {
+  width: 47%;
+  margin-top: -24px;
+  margin-left: 60px;
+}
+.type-1923 .detail_right .attr-info .variations .form-group .input-number {
   text-align: center;
-  width: 100%;
 }
-.type-1923 .detail_right .attr-info .variations .quantity .qty-down {
-  border-right: 1px solid #e8e8e8;
-  display: block;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 35px;
-}
-.type-1923 .detail_right .attr-info .variations .quantity a {
-  color: #333;
-}
-.type-1923 .detail_right .attr-info .variations .quantity .qty {
-  width: 100%;
-  text-align: center;
-  height: 28px;
-  border: 0;
-  display: block;
-  padding: 0 15px;
-}
-.type-1923 .detail_right .attr-info .variations .quantity .qty-up {
-  border-left: 1px solid #e8e8e8;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 35px;
+.type-1923 .detail_right .attr-info .variations .form-group .glyphicon {
+  color: black;
 }
 .type-1923 .detail_right .attr-info .variations .alt {
+  text-transform: uppercase;
   background: #fe9c00 none repeat scroll 0 0;
   color: #fff;
   display: block;
@@ -205,10 +171,15 @@
   max-width: 240px;
   text-align: center;
   width: 100%;
+  transition: all 0.3s ease-out 0s;
   border-radius: 0;
   position: relative;
   font-weight: 400;
-  text-transform: uppercase;
+  border: none;
+}
+.type-1923 .detail_right .attr-info .variations .alt:hover {
+  background: #ED321E;
+  color: #fff;
 }
 .type-1923 .detail_right .attr-info .variations .alt:before {
   content: '\f07a';
@@ -324,6 +295,9 @@
   color: #fff;
   background: #FE9C00;
 }
+.type-1923 .product-collateral ul.tabbernav_product2 li .descr {
+  margin-left: 0;
+}
 .type-1923 .product-collateral ul.tabbernav_product2 li a {
   text-transform: uppercase;
   background: transparent;
@@ -332,6 +306,7 @@
   display: block;
   font-size: 13px;
   padding: 12px 20px;
+  margin: 0 6px;
   text-decoration: none;
 }
 .type-1923 .product-collateral .tabs {
@@ -382,6 +357,10 @@
   border: 1px solid #000000;
   font-weight: bold;
   text-transform: uppercase;
+}
+.type-1923 .product-collateral .tabs .form-add button span:hover {
+  background: #ED321E;
+  color: #fff;
 }
 .type-1923 .product-collateral .tabs .review h2 {
   font-weight: bold;
@@ -452,17 +431,38 @@
 }
 .type-1923 .product-collateral .tabs .review form fieldset .form-list li input.input-text {
   width: 250px;
+  padding: 3px;
 }
 .type-1923 .product-collateral .tabs .review form fieldset .form-list li textarea {
   width: 95%;
   height: 10em;
+  padding: 3px;
 }
 .type-1923 .product-collateral .tabs .review form .buttons-set {
   clear: both;
   margin: 20px 0 0;
   padding: 5px;
-  border: 1px solid #fff;
   text-align: right;
+}
+.type-1923 .product-collateral .tabs .review form .buttons-set .button {
+  background: none;
+  margin-right: 68px;
+  border: 1px solid black;
+}
+.type-1923 .product-collateral .tabs .review form .buttons-set .button:hover {
+  background: #ED321E;
+  color: #fff;
+}
+.type-1923 .product-collateral .tabs .review form .buttons-set .button span {
+  display: block;
+  font-family: "Open Sans", sans-serif;
+  line-height: 22px;
+  text-align: center;
+  white-space: nowrap;
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .type-1923 .clear {
   clear: both;
