--- a/1923/less/1923.less
+++ b/1923/less/1923.less
@@ -136,28 +136,22 @@
                 margin: 0 0 15px;
             }
         }
-        .product-rating{
-            display: inline-block;
-            margin: 0;
-            vertical-align: top;
-            background: rgba(0, 0, 0, 0) url(../images/bg-rate.png) repeat-x scroll 0 0;
-            height: 14px;
-            position: relative;
-            width: 70px;
-            .inner-rating{
-                background: rgba(0, 0, 0, 0) url(../images/rate-star.png) repeat-x scroll 0 0;
-                height: 14px;
+        .star-rating {
+            line-height:32px;
+            font-size:1.25em;
+            .fa-star{
+                color: yellow;
             }
+            cursor: pointer;
         }
         .product-order{
-            border-left: 1px solid #e8e8e8;
             height: 14px;
             line-height: 14px;
-            margin-left: 7px;
+            margin-left: -10px;
             padding-left: 10px;
             display: inline-block;
             position: relative;
-            vertical-align: top
+            vertical-align: top;
         }
         .product-code{
             label {
@@ -229,47 +223,19 @@
                     width: 100%;
                     display: inline-block;
                 }
-                .quantity {
-                    float: none;
-                    border: 1px solid #e8e8e8;
-                    display: inline-block;
-                    height: 30px;
-                    line-height: 30px;
-                    max-width: 240px;
-                    padding: 0 35px;
-                    position: relative;
-                    text-align: center;
-                    width: 100%;
-                    .qty-down {
-                        border-right: 1px solid #e8e8e8;
-                        display: block;
-                        height: 100%;
-                        left: 0;
-                        position: absolute;
-                        top: 0;
-                        width: 35px;
-                    }
-                    a {
-                        color: #333;
-                    }
-                    .qty {
-                        width: 100%;
+                .form-group {
+                    width: 47%;
+                    margin-top: -24px;
+                    margin-left: 60px;
+                    .input-number{
                         text-align: center;
-                        height: 28px;
-                        border: 0;
-                        display: block;
-                        padding: 0 15px;
                     }
-                    .qty-up {
-                        border-left: 1px solid #e8e8e8;
-                        height: 100%;
-                        position: absolute;
-                        right: 0;
-                        top: 0;
-                        width: 35px;
+                    .glyphicon {
+                        color: black;
                     }
                 }
                 .alt{
+                    text-transform: uppercase;
                     background: #fe9c00 none repeat scroll 0 0;
                     color: #fff;
                     display: block;
@@ -279,10 +245,15 @@
                     max-width: 240px;
                     text-align: center;
                     width: 100%;
+                    transition: all 0.3s ease-out 0s;
                     border-radius: 0;
                     position: relative;
                     font-weight: 400;
-                    text-transform: uppercase;
+                    border: none;
+                    &:hover {
+                        background: #ED321E;
+                        color: #fff;
+                    }
                     &:before {
                         content: '\f07a';
                         font-family: fontawesome;
@@ -405,6 +376,9 @@
                     color: #fff;
                     background: #FE9C00;
                 }
+                .descr{
+                    margin-left: 0;
+                }
                 a {
                     text-transform: @text-transform;
                     background: transparent;
@@ -413,7 +387,7 @@
                     display: @display-block;
                     font-size: @font-size;
                     padding: 12px 20px;
-
+                    margin: 0 6px;
                     text-decoration: @text-decoration;
                 }
             }
@@ -467,6 +441,10 @@
                         border: 1px solid #000000;
                         font-weight: @font-weight-bold;
                         text-transform: @text-transform;
+                        &:hover{
+                            background: #ED321E;
+                            color: #fff;
+                        }   
                     }
                 }
 
@@ -539,10 +517,12 @@
                             }
                             input.input-text {
                                 width: 250px;
+                                padding: 3px;
                             }
                             textarea {
                                 width: 95%;
                                 height: 10em;
+                                padding: 3px;
                             }
                         }
                     }
@@ -550,8 +530,27 @@
                         clear: @clear;
                         margin: 20px 0 0;
                         padding: 5px;
-                        border: 1px solid #fff;
                         text-align: right;
+                        .button{
+                            background: none;
+                            margin-right: 68px;
+                            border: 1px solid black;
+                            &:hover{
+                                background: #ED321E;
+                                color: #fff;
+                            }
+                            span{
+                                display: block;
+                                font-family: "Open Sans", sans-serif;
+                                line-height: 22px;
+                                text-align: center;
+                                white-space: nowrap;
+                                color: #000;
+                                text-decoration: none;  
+                                font-weight: bold;
+                                text-transform: uppercase;
+                            }
+                        }
                     }
                 }
             }      
