--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -12,6 +12,8 @@
     .vlput{
         width: 41%;
         padding: 3px;
+		margin-left: 2px;
+		margin-right: -2px;
     }
     .accordion1::after {
         content: "\2212";
