--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -93,6 +93,7 @@
                 padding: 8px;
                 display: inline-table;
                 margin-right: -4px;
+				border-radius: unset;
             }
             form{
                 padding: 0;
