--- a/1923/less/1923.less
+++ b/1923/less/1923.less
@@ -223,15 +223,16 @@
                     width: 100%;
                     display: inline-block;
                 }
-                .form-group {
-                    width: 47%;
-                    margin-top: -24px;
-                    margin-left: 60px;
-                    .input-number{
-                        text-align: center;
+                .quantity{
+                    .sub{
+                        width: 6%;
                     }
-                    .glyphicon {
-                        color: black;
+                    .add{
+                        width: 6%;
+                    }
+                    input{
+                        text-align: center;
+                        width: 170px;
                     }
                 }
                 .alt{
@@ -420,7 +421,7 @@
                         padding: 3px;
                     }
                 }
-                button {
+                button2 {
                     overflow: visible;
                     width: auto;
                     border: @border;
@@ -531,7 +532,7 @@
                         margin: 20px 0 0;
                         padding: 5px;
                         text-align: right;
-                        .button{
+                        .button1{
                             background: none;
                             margin-right: 68px;
                             border: 1px solid black;
