--- a/1923/less/1923.less
+++ b/1923/less/1923.less
@@ -226,13 +226,20 @@
                 .quantity{
                     .sub{
                         width: 6%;
+                        background: #fff;
+                        border: 1px solid #e8e8e8;
+                        padding: 2px 0;
                     }
                     .add{
                         width: 6%;
+                        background: #fff;
+                        border: 1px solid #e8e8e8;
+                        padding: 2px 0;
                     }
                     input{
                         text-align: center;
                         width: 170px;
+                        border: 1px solid #e8e8e8;
                     }
                 }
                 .alt{
