--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -11,9 +11,8 @@
     background:@color4;
     .vlput{
         width: 41%;
-        padding: 3px;
-		margin-left: 2px;
-		margin-right: -2px;
+        padding: 2px 3px;
+        margin-right: -2px;
     }
     .accordion1::after {
         content: "\2212";
@@ -88,12 +87,12 @@
         .range-filter {
             color: @color2;
             .input-group-addon{
-                margin-top: -1px;
+                margin-top: -2px;
                 width: 0;
-                padding: 8px;
+                padding: 7px 8px;
                 display: inline-table;
                 margin-right: -4px;
-				border-radius: unset;
+                border-radius: unset;
             }
             form{
                 padding: 0;
@@ -113,7 +112,7 @@
                 background: @color3 none repeat scroll 0 0;
                 border: medium none;
                 color: @color4;
-                height: 30px;
+                height: 28px;
                 width: 72px;
             }
             #slider-range1 {
